--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = OCA/server-tools
 	url = git@github.com:OCA/server-tools.git
 	branch = 11.0
+
+[submodule "VCloud9/vcloud9_prod_11"]
+	path = VCloud9/vcloud9_prod_11
+	url = git@github.com:VCloud9/vcloud9_prod_11.git
+	branch = vcloud9_prod
